--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-streamlit
-pandas
-numpy
-plotly-express==0.4.1
+langdetect==1.0.9
+matplotlib==3.8.0
+numpy==1.26.4
+pandas==2.2.2
+plotly==5.20.0
+plotly==5.9.0
+streamlit==1.30.0
+streamlit==1.33.0
+wordcloud==1.9.3
