--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ langdetect==1.0.9
 matplotlib==3.8.0
 numpy==1.26.4
 pandas==2.2.2
-plotly==5.20.0
-plotly==5.9.0
+plotly~=5.20.0
+plotly~=5.9.0
 streamlit==1.30.0
 streamlit==1.33.0
 wordcloud==1.9.3
