--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ numpy==1.26.4
 pandas==2.2.2
 plotly
 plotly~=5.9.0
-streamlit==1.30.0
-streamlit==1.33.0
+streamlit
+streamlit==1.34
 wordcloud==1.9.3
